--- a/bankline-android/app/src/main/res/layout/bank_statement_item.xml
+++ b/bankline-android/app/src/main/res/layout/bank_statement_item.xml
@@ -18,7 +18,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_money_on" />
+            tools:src="@drawable/ic_money_in" />
 
         <TextView
             android:id="@+id/tvDescription"
